# Rust-OS-learning

./: Cargo.toml  README.md
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: main.rs  panic.rs  serial.rs
kernel/src/vga_buffer/: buffer.rs  mod.rs  writer.rs
src/: gdt.rs  lib.rs  main.rs  panic.rs  serial.rs  test.rs
src/interrupts/: idt.rs  index.rs  mod.rs
src/interrupts/handlers/: keyboard.rs  mod.rs
src/vga_buffer/: mod.rs  writer.rs
tests/: basic_boot.rs  should_panic.rs
