[package]
name = "learning-os"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
build-command = ["build"] # cargo bootimage --target ./x86_64-kernels.json
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio", # serial port log
    "-display", "none", # hide qemu window
]
test-timeout = 300
test-success-exit-code = 33

[dependencies]
bootloader = "0.9.28"
spin = "0.9.8"
uart_16550 = "0.3.0"
x86_64 = "0.14.12"
